// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feeds cancelFeedSubmissions returns count and submission info of canceled feed submissions 1`] = `
Array [
  Object {
    "Count": 1,
    "FeedSubmissionInfo": Object {
      "FeedProcessingStatus": "_CANCELLED_",
      "FeedSubmissionId": "2291326430",
      "FeedType": "_POST_PRODUCT_DATA_",
      "SubmittedDate": 2009-02-20T02:10:35.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`feeds getFeedSubmissionCount returns count of total number of feed submissions if succesful 1`] = `
Array [
  Object {
    "Count": 463,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`feeds getFeedSubmissionList returns a next token and feed submission info if succesful 1`] = `
Array [
  Object {
    "FeedSubmissionInfo": Object {
      "FeedProcessingStatus": "_SUBMITTED_",
      "FeedSubmissionId": "2291326430",
      "FeedType": "_POST_PRODUCT_DATA_",
      "SubmittedDate": 2009-02-20T02:10:35.000Z,
    },
    "NextToken": NextToken {
      "action": "GetFeedSubmissionList",
      "token": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`feeds getFeedSubmissionListByNextToken returns a next token and feed submission info if succesful 1`] = `
Array [
  Object {
    "FeedSubmissionInfo": Object {
      "FeedProcessingStatus": "_SUBMITTED_",
      "FeedSubmissionId": "2291326430",
      "FeedType": "_POST_PRODUCT_DATA_",
      "SubmittedDate": 2009-02-20T02:10:35.000Z,
    },
    "NextToken": NextToken {
      "action": "GetFeedSubmissionList",
      "token": "none",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`feeds getFeedSubmissionResult returns an XML file when succesful 1`] = `
Array [
  "<AmazonEnvelope xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:noNamespaceSchemaLocation=\\"amzn-envelope.xsd\\">
    <Header>
        <DocumentVersion>1.02</DocumentVersion>
        <MerchantIdentifier>T_M_GOOD_83835495</MerchantIdentifier>
    </Header>
    <MessageType>ProcessingReport</MessageType>
    <Message>
        <MessageID>1</MessageID>
        <ProcessingReport>
            <DocumentTransactionID>4319742521</DocumentTransactionID>
        </ProcessingReport>
    </Message>
</AmazonEnvelope>",
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`feeds submitFeed returns feed info of submitted feeds if succesful 1`] = `
Array [
  Object {
    "FeedSubmissionInfo": Object {
      "FeedProcessingStatus": "_SUBMITTED_",
      "FeedSubmissionId": "2291326430",
      "FeedType": "_POST_PRODUCT_DATA_",
      "SubmittedDate": 2009-02-20T02:10:35.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
